feat(data-1760): flex model refactoring
* add stop entity to store stop ids (used for GTFS flex import)
* add equals/hashcode/tostring for all model entities
* add datasetId and originalId to IdentifiedEntity (used for GTFS flex import)
* add IdentifiedRepository to factorize findByDatasetIdAndOriginalId method